force-app/main/default/objects/webForm__c/webForm__c.object-meta.xml
<CustomObject>
    <label>Web Form</label>
    <nameField>
        <label>webForm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>