force-app/main/default/objects/webForm__c/fields/Affiliated_Rep__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliated Rep</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Web Forms (Affiliated Rep)</relationshipLabel>
    <relationshipName>Web_Forms_1</relationshipName>
    <type>Lookup</type>
</CustomField>