force-app/main/default/objects/webForm__c/fields/Amount_spent_on_Soaps__c.field-meta.xml
<CustomField>
    <fullName>Amount_spent_on_Soaps__c</fullName>
    <label>Amount spent on Soaps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$25</fullName>
            </value>
            <value>
                <fullName>$35</fullName>
            </value>
            <value>
                <fullName>$45</fullName>
            </value>
            <value>
                <fullName>above $45</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>