force-app/main/default/objects/webForm__c/fields/ApptSetter__c.field-meta.xml
<CustomField>
    <fullName>ApptSetter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ApptSetter</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Personnel__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Web Forms</relationshipLabel>
    <relationshipName>Web_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>