force-app/main/default/objects/webForm__c/fields/Average_Electric_Bill_2__c.field-meta.xml
<CustomField>
    <fullName>Average_Electric_Bill_2__c</fullName>
    <label>Average Electric Bill</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under $165</fullName>
            </value>
            <value>
                <fullName>$165 - $200</fullName>
            </value>
            <value>
                <fullName>$200 - $250</fullName>
            </value>
            <value>
                <fullName>$250 - $300</fullName>
            </value>
            <value>
                <fullName>Over  $300</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>