force-app/main/default/objects/webForm__c/fields/Average_Electric_Bill__c.field-meta.xml
<CustomField>
    <fullName>Average_Electric_Bill__c</fullName>
    <label>Average Electric Bill</label>
    <length>100</length>
    <type>Text</type>
</CustomField>