force-app/main/default/objects/webForm__c/fields/Average_Utility_Bill_Start__c.field-meta.xml
<CustomField>
    <fullName>Average_Utility_Bill_Start__c</fullName>
    <label>Average Utility Bill Start</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; $140</fullName>
            </value>
            <value>
                <fullName>$141 - $155</fullName>
            </value>
            <value>
                <fullName>$156 - $165</fullName>
            </value>
            <value>
                <fullName>$166 - $170</fullName>
            </value>
            <value>
                <fullName>$171 - $175</fullName>
            </value>
            <value>
                <fullName>$176 - $180</fullName>
            </value>
            <value>
                <fullName>$181 &lt;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>