force-app/main/default/objects/webForm__c/fields/Bath__c.field-meta.xml
<CustomField>
    <fullName>Bath__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bath</label>
    <type>Checkbox</type>
</CustomField>