force-app/main/default/objects/webForm__c/fields/Bath_Notes__c.field-meta.xml
<CustomField>
    <fullName>Bath_Notes__c</fullName>
    <label>Bath Notes</label>
    <type>TextArea</type>
</CustomField>