force-app/main/default/objects/webForm__c/fields/Bath_Status__c.field-meta.xml
<CustomField>
    <fullName>Bath_Status__c</fullName>
    <label>Bath Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hot_Lead_Statuses</valueSetName>
    </valueSet>
</CustomField>