force-app/main/default/objects/webForm__c/fields/Blinds_Shutter_Notes__c.field-meta.xml
<CustomField>
    <fullName>Blinds_Shutter_Notes__c</fullName>
    <label>Blinds &amp; Shutter Notes</label>
    <type>TextArea</type>
</CustomField>