force-app/main/default/objects/webForm__c/fields/Blinds_Shutters__c.field-meta.xml
<CustomField>
    <fullName>Blinds_Shutters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blinds &amp; Shutters</label>
    <type>Checkbox</type>
</CustomField>