force-app/main/default/objects/webForm__c/fields/Book_Now_Date__c.field-meta.xml
<CustomField>
    <fullName>Book_Now_Date__c</fullName>
    <label>Book Now Date</label>
    <type>DateTime</type>
</CustomField>