force-app/main/default/objects/webForm__c/fields/Bottled_Water__c.field-meta.xml
<CustomField>
    <fullName>Bottled_Water__c</fullName>
    <label>Bottled Water</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>