force-app/main/default/objects/webForm__c/fields/Cable_Satellite__c.field-meta.xml
<CustomField>
    <fullName>Cable_Satellite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cable/Satellite</label>
    <type>Checkbox</type>
</CustomField>