force-app/main/default/objects/webForm__c/fields/Carpet_Tile_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Tile_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carpet Tile Appointment</label>
    <type>Checkbox</type>
</CustomField>