force-app/main/default/objects/webForm__c/fields/Carpet_Tile_Data__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Tile_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carpet Tile Data</label>
    <type>Checkbox</type>
</CustomField>