force-app/main/default/objects/webForm__c/fields/Carpet_Tile_Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Tile_Hot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carpet Tile Hot Lead</label>
    <type>Checkbox</type>
</CustomField>