force-app/main/default/objects/webForm__c/fields/Carpet_Tile_Note__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Tile_Note__c</fullName>
    <label>Carpet  Tile Note</label>
    <type>TextArea</type>
</CustomField>