force-app/main/default/objects/webForm__c/fields/Credit_Score_1__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_1__c</fullName>
    <label>Credit Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under  620</fullName>
            </value>
            <value>
                <fullName>620 - 650</fullName>
            </value>
            <value>
                <fullName>650 - 700</fullName>
            </value>
            <value>
                <fullName>Over 700</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>