force-app/main/default/objects/webForm__c/fields/Current_Window_Coverings_Blinds__c.field-meta.xml
<CustomField>
    <fullName>Current_Window_Coverings_Blinds__c</fullName>
    <label>Current Window Coverings:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>