force-app/main/default/objects/webForm__c/fields/Electric_Company__c.field-meta.xml
<CustomField>
    <fullName>Electric_Company__c</fullName>
    <label>Electric Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APS</fullName>
            </value>
            <value>
                <fullName>SRP</fullName>
            </value>
            <value>
                <fullName>Mesa Electric</fullName>
            </value>
            <value>
                <fullName>NV Energy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>