force-app/main/default/objects/webForm__c/fields/End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime__c</fullName>
    <formula>DATETIMEVALUE( Date__c + &quot; &quot; + End_Time__c  + &quot;:00&quot;) + 0.2917</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End DateTime</label>
    <type>DateTime</type>
</CustomField>