force-app/main/default/objects/webForm__c/fields/FAccount_Name__c.field-meta.xml
<CustomField>
    <fullName>FAccount_Name__c</fullName>
    <formula>Account__r.FirstName +&quot; &quot;+ Account__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FAccount Name</label>
    <type>Text</type>
</CustomField>