force-app/main/default/objects/webForm__c/fields/fCity__c.field-meta.xml
<CustomField>
    <fullName>fCity__c</fullName>
    <formula>Account__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>