force-app/main/default/objects/webForm__c/fields/fEmail__c.field-meta.xml
<CustomField>
    <fullName>fEmail__c</fullName>
    <formula>Account__r.PAEmail__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>