force-app/main/default/objects/webForm__c/fields/fFirst_Name__c.field-meta.xml
<CustomField>
    <fullName>fFirst_Name__c</fullName>
    <formula>Account__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>