force-app/main/default/objects/webForm__c/fields/fLast_Name__c.field-meta.xml
<CustomField>
    <fullName>fLast_Name__c</fullName>
    <formula>Account__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>