force-app/main/default/objects/webForm__c/fields/Floor_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>Floor_Cleaning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Floor Cleaning</label>
    <type>Checkbox</type>
</CustomField>