force-app/main/default/objects/webForm__c/fields/Floor_Cleaning_Notes__c.field-meta.xml
<CustomField>
    <fullName>Floor_Cleaning_Notes__c</fullName>
    <label>Floor Cleaning Notes</label>
    <type>TextArea</type>
</CustomField>