force-app/main/default/objects/webForm__c/fields/Flooring__c.field-meta.xml
<CustomField>
    <fullName>Flooring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flooring</label>
    <type>Checkbox</type>
</CustomField>