force-app/main/default/objects/webForm__c/fields/Flooring_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Flooring_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flooring Appointment</label>
    <type>Checkbox</type>
</CustomField>