force-app/main/default/objects/webForm__c/fields/Flooring_Data__c.field-meta.xml
<CustomField>
    <fullName>Flooring_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flooring Data</label>
    <type>Checkbox</type>
</CustomField>