force-app/main/default/objects/webForm__c/fields/Flooring_Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>Flooring_Hot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flooring Hot Lead</label>
    <type>Checkbox</type>
</CustomField>