force-app/main/default/objects/webForm__c/fields/Flooring_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Flooring_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flooring Marketing</label>
    <type>Checkbox</type>
</CustomField>