force-app/main/default/objects/webForm__c/fields/Flooring_Note__c.field-meta.xml
<CustomField>
    <fullName>Flooring_Note__c</fullName>
    <label>Flooring Note</label>
    <type>TextArea</type>
</CustomField>