force-app/main/default/objects/webForm__c/fields/Flooring_Notes__c.field-meta.xml
<CustomField>
    <fullName>Flooring_Notes__c</fullName>
    <label>Flooring Notes</label>
    <type>TextArea</type>
</CustomField>