force-app/main/default/objects/webForm__c/fields/fPhone__c.field-meta.xml
<CustomField>
    <fullName>fPhone__c</fullName>
    <formula>Account__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>