force-app/main/default/objects/webForm__c/fields/fState__c.field-meta.xml
<CustomField>
    <fullName>fState__c</fullName>
    <formula>TEXT(Account__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State</label>
    <type>Text</type>
</CustomField>