force-app/main/default/objects/webForm__c/fields/fZip__c.field-meta.xml
<CustomField>
    <fullName>fZip__c</fullName>
    <formula>Account__r.Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip</label>
    <type>Text</type>
</CustomField>