force-app/main/default/objects/webForm__c/fields/Garage_Door_Notes__c.field-meta.xml
<CustomField>
    <fullName>Garage_Door_Notes__c</fullName>
    <label>Garage Door Notes</label>
    <type>TextArea</type>
</CustomField>