force-app/main/default/objects/webForm__c/fields/Garage_Doors_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Garage_Doors_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garage Doors Appointment</label>
    <type>Checkbox</type>
</CustomField>