force-app/main/default/objects/webForm__c/fields/Garage_Doors_Data__c.field-meta.xml
<CustomField>
    <fullName>Garage_Doors_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garage Doors Data</label>
    <type>Checkbox</type>
</CustomField>