force-app/main/default/objects/webForm__c/fields/Garage_Doors_Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>Garage_Doors_Hot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garage Doors Hot Lead</label>
    <type>Checkbox</type>
</CustomField>