force-app/main/default/objects/webForm__c/fields/Garage_Doors_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Garage_Doors_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garage Doors Marketing</label>
    <type>Checkbox</type>
</CustomField>