force-app/main/default/objects/webForm__c/fields/Garage_Doors_Note__c.field-meta.xml
<CustomField>
    <fullName>Garage_Doors_Note__c</fullName>
    <label>Garage Doors Note</label>
    <type>TextArea</type>
</CustomField>