force-app/main/default/objects/webForm__c/fields/Garage_Floor_Coating__c.field-meta.xml
<CustomField>
    <fullName>Garage_Floor_Coating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garage Floor Coating</label>
    <type>Checkbox</type>
</CustomField>