force-app/main/default/objects/webForm__c/fields/Garage_Floor_Coating_Notes__c.field-meta.xml
<CustomField>
    <fullName>Garage_Floor_Coating_Notes__c</fullName>
    <label>Garage Floor Coating Notes</label>
    <type>TextArea</type>
</CustomField>