force-app/main/default/objects/webForm__c/fields/Garage_Organization__c.field-meta.xml
<CustomField>
    <fullName>Garage_Organization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garage Organization</label>
    <type>Checkbox</type>
</CustomField>