force-app/main/default/objects/webForm__c/fields/Garage_Organization_Notes__c.field-meta.xml
<CustomField>
    <fullName>Garage_Organization_Notes__c</fullName>
    <label>Garage Organization Notes</label>
    <type>TextArea</type>
</CustomField>