force-app/main/default/objects/webForm__c/fields/Gate_to_Backyard__c.field-meta.xml
<CustomField>
    <fullName>Gate_to_Backyard__c</fullName>
    <label>Gate to Backyard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>