force-app/main/default/objects/webForm__c/fields/Handy_Man_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Handy_Man_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handy Man Appointment</label>
    <type>Checkbox</type>
</CustomField>