force-app/main/default/objects/webForm__c/fields/Handy_Man_Data__c.field-meta.xml
<CustomField>
    <fullName>Handy_Man_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handy Man Data</label>
    <type>Checkbox</type>
</CustomField>