force-app/main/default/objects/webForm__c/fields/Handy_Man_Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>Handy_Man_Hot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handy Man Hot Lead</label>
    <type>Checkbox</type>
</CustomField>