force-app/main/default/objects/webForm__c/fields/Handy_Man_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Handy_Man_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handy Man Marketing</label>
    <type>Checkbox</type>
</CustomField>