force-app/main/default/objects/webForm__c/fields/Handy_Man_Note__c.field-meta.xml
<CustomField>
    <fullName>Handy_Man_Note__c</fullName>
    <label>Handy Man Note</label>
    <type>TextArea</type>
</CustomField>