force-app/main/default/objects/webForm__c/fields/Handyman__c.field-meta.xml
<CustomField>
    <fullName>Handyman__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Handyman</label>
    <type>Checkbox</type>
</CustomField>