force-app/main/default/objects/webForm__c/fields/Handyman_Notes__c.field-meta.xml
<CustomField>
    <fullName>Handyman_Notes__c</fullName>
    <label>Handyman Notes</label>
    <type>TextArea</type>
</CustomField>