force-app/main/default/objects/webForm__c/fields/Home_Automation_Data__c.field-meta.xml
<CustomField>
    <fullName>Home_Automation_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Automation Data</label>
    <type>Checkbox</type>
</CustomField>