force-app/main/default/objects/webForm__c/fields/Home_Automation_Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>Home_Automation_Hot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Automation Hot Lead</label>
    <type>Checkbox</type>
</CustomField>