force-app/main/default/objects/webForm__c/fields/Home_Automation_Note__c.field-meta.xml
<CustomField>
    <fullName>Home_Automation_Note__c</fullName>
    <label>Home Automation Note</label>
    <type>TextArea</type>
</CustomField>