force-app/main/default/objects/webForm__c/fields/Hour__c.field-meta.xml
<CustomField>
    <fullName>Hour__c</fullName>
    <label>Hour</label>
    <length>50</length>
    <type>Text</type>
</CustomField>