force-app/main/default/objects/webForm__c/fields/House_Cleaning_Notes__c.field-meta.xml
<CustomField>
    <fullName>House_Cleaning_Notes__c</fullName>
    <label>House Cleaning Notes</label>
    <type>TextArea</type>
</CustomField>