force-app/main/default/objects/webForm__c/fields/House_Square_Footage_1__c.field-meta.xml
<CustomField>
    <fullName>House_Square_Footage_1__c</fullName>
    <label>House Square Footage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under 1200</fullName>
            </value>
            <value>
                <fullName>1200 - 1500</fullName>
            </value>
            <value>
                <fullName>1500 - 2000</fullName>
            </value>
            <value>
                <fullName>Over 2000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>