force-app/main/default/objects/webForm__c/fields/House_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>House_Square_Footage__c</fullName>
    <label>House Square Footage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>