force-app/main/default/objects/webForm__c/fields/HVAC__c.field-meta.xml
<CustomField>
    <fullName>HVAC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HVAC</label>
    <type>Checkbox</type>
</CustomField>