force-app/main/default/objects/webForm__c/fields/HVAC_Appointment__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HVAC Appointment</label>
    <type>Checkbox</type>
</CustomField>