force-app/main/default/objects/webForm__c/fields/HVAC_Data__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HVAC Data</label>
    <type>Checkbox</type>
</CustomField>