force-app/main/default/objects/webForm__c/fields/HVAC_Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Hot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HVAC Hot Lead</label>
    <type>Checkbox</type>
</CustomField>