force-app/main/default/objects/webForm__c/fields/HVAC_Marketing__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HVAC Marketing</label>
    <type>Checkbox</type>
</CustomField>