force-app/main/default/objects/webForm__c/fields/HVAC_Note__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Note__c</fullName>
    <label>HVAC Note</label>
    <type>TextArea</type>
</CustomField>