force-app/main/default/objects/webForm__c/fields/HVAC_Notes__c.field-meta.xml
<CustomField>
    <fullName>HVAC_Notes__c</fullName>
    <label>HVAC Notes</label>
    <type>TextArea</type>
</CustomField>