force-app/main/default/objects/webForm__c/fields/I_am_aware_there_is_up_to_a_99_00_Activ__c.field-meta.xml
<CustomField>
    <fullName>I_am_aware_there_is_up_to_a_99_00_Activ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I am aware there is up to a $99.00 Activ</label>
    <type>Checkbox</type>
</CustomField>